2020-04-17  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* primes.tcl: Correct the implementation of the totient function, as per https://core.tcl-lang.org/tcllib/tktview?name=7017dad214
	* primes.test: Added a test case for the numbers 1 to 12 for the totient function
	* pkgIndex.tcl: Bumped version of numtheory to 1.1.2

2020-02-13  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* special.tcl: Add procs for returning Euler and Bernoulli number, version to 0.5.0
	* special.test: Add tests for these new procs
	* special.man: Add documentation for these new procs
	* pkgIndex.tcl: Bumped version of special functions package to 0.5.0

2019-11-08  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Add a new type of error message, version to 1.5.0
	* pdf_stat.tcl: Add procedures for Laplace, Kumaraswamy and negative binomial distributions, also tests for homoscedasticity
	* statistics.tcl: Corresponding tests
	* statistics.man: Documentation of the new procedures
	* pkgIndex.tcl: Bumped version of statistics package to 1.5.0

2019-11-04  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* interpolate.tcl: Correct the procedure interp-linear for another pair of corner cases (thanks to Alexandru)

2019-10-29  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* interpolate.tcl: Correct the procedure interp-linear for several corner cases (thanks to Alexandru)
	* pkgIndex.tcl: Bumped version of interpolation package to 1.1.2

2019-09-30  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* special.tcl: Add function incomplete Beta, regularized Beta and digamma
	* special.test: Add tests for the new functions
	* special.man: Describe the new functions
	* pkgIndex.tcl: Bumped version of special functions package to 0.4

2019-08-14  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* math_geometry.man: Describe several procedures that were not described yet
	* geometry.tcl: Export several procedures that were not exported yet